# spherequant

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
apexquant/: __init__.py  audit.py  exceptions.py  ptq.py  rotation_utils.py
apexquant/bench/: __init__.py  __main__.py  _eval.py  llm.py  vision.py
experiments/cnn_init_rotation/: README.md  model.py  plot.py  ptq.py  rotated_conv.py  rotation_utils.py  run.py  test_sanity.py  train.py
experiments/cnn_init_rotation/results/: results.jsonl
experiments/imagenet_ptq/: README.md  bn_recal.py  final_summary.py  imagenet_loader.py  mha_quant.py  models.py  plot.py  plot_rotation_distributions.py  run.py  run_bn_recal.py  run_next.sh  run_quarot.py  run_seed_error_bars.py  run_vit.py
experiments/imagenet_ptq/results/: results.jsonl
experiments/llm_ptq/: README.md  data.py  final_summary.py  models.py  plot_rotation_distributions.py  run.py
experiments/llm_ptq/hendrix/: README.md  run_llama.py  slurm_70b.sh  slurm_8b.sh  slurm_8b_ml4good.sh  slurm_smoke.sh  verify_access.py
experiments/llm_ptq/results/: results.jsonl
paper/: methodology.tex  references.bib  related_works.tex  results.tex  supplementary.tex
spherequant/: __init__.py  audit.py  exceptions.py  ptq.py
spherequant/bench/: __init__.py  __main__.py  _eval.py  llm.py  vision.py
tests/: test_audit.py  test_bench_smoke.py
