[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "apexquant"
version = "0.1.0"
description = "Training-free post-training weight quantization via rotation + Beta-matched scalar codebook"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
experiments = [
    "torchvision>=0.16",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pandas>=2.0",
    "tqdm>=4.65",
    "Pillow>=10.0",
    "transformers>=4.40",
    "datasets>=2.18",
    "huggingface_hub>=0.22",
    "safetensors>=0.4",
    "accelerate>=0.28",
]
test = [
    "pytest>=7.0",
    "torchvision>=0.16",
]

[tool.setuptools.packages.find]
include = ["apexquant*"]
